--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "mongoose": "^5.11.7"
+    "express-session": "^1.17.1",
+    "mongoose": "^5.11.7",
+    "path": "^0.12.7"
   }
 }
